Correct package.json syntax.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Alex Thomas (@cawfree)",
   "license": "MIT",
   "private": false,
-  "peerDependencies": [
+  "peerDependencies": {
     "prop-types": "^15.6.1",
     "react-timer-mixin": "^0.13.4",
     "react-native": "^0.59.1"
-  ]
+  }
 }
