--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cawfree/react-native-lightbox",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A stateful <LightBox/> component for React Native.",
   "main": "index.js",
   "repository": "https://github.com/Cawfree/react-native-lightbox",
@@ -9,7 +9,10 @@
   "private": false,
   "peerDependencies": {
     "prop-types": "^15.6.1",
-    "react-timer-mixin": "^0.13.4",
-    "react-native": "^0.59.1"
+    "react-native": "^0.59.1",
+    "react-timer-mixin": "^0.13.4"
+  },
+  "dependencies": {
+    "@cawfree/react-native-lightbox": "^1.0.1"
   }
 }
